# rugbystat_v2

./: .coveragerc  .gitignore  .travis.yml  Procfile  README.md  TODO  bower.json  docker-compose.yml  entrypoint.sh  fabfile.py  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  settings.vscode.json
docs/: index.md
docs/api/: documents.md  issues.md  teams.md
requirements/: base.txt  local.txt  production.txt  test.txt
rugbystat/: manage.py  wsgi.py
rugbystat/clippings/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  utils.py  views.py  viewsets.py
rugbystat/clippings/migrations/: 0001_initial.py  0002_auto_20170102_1722.py  0002_auto_20170103_1513.py  0003_auto_20170103_1008.py  (+14 more)
rugbystat/conf/: urls.py  wsgi.py
rugbystat/config/: common.py
rugbystat/fixtures/: cities.json  sourceobject.json  sources.json  teams.json
rugbystat/frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.mjs
rugbystat/main/: admin.py  filters.py  forms.py  views.py
rugbystat/matches/: admin.py  filters.py  forms.py  models.py  moderator.py  serializers.py  views.py  viewsets.py
rugbystat/teams/: admin.py  filters.py  forms.py  models.py  moderator.py  serializers.py  views.py  viewsets.py
rugbystat/templates/: _documents.html  _modal.html  base.html  contacts.html  documents.html  import.html  persons.html  teams.html
rugbystat/users/: forms.py
rugbystat/utils/: parsers.py  utils.py  widgets.py
static_root/css/: modal.css
static_root/js/: persons.js  teams.js
(+101 files in other folders)
