[tool.poetry]
name = "rugbystat"
version = "1.0.0"
description = "Soviet rugby statistics engine"
authors = ["krnr <ultrasnet@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"

django = "~2"
django-extensions = "^3.1.0"
django-model-utils = "^4.1.1"
django-widget-tweaks = "^1.4.8"
django-admin-sortable2 = "^0.7.7"
django-allauth = "^0.44.0"
django-autocomplete-light = "^3.8.1"
django-filter = "^2.4.0"
django-markdownx = "^3.0.1"
django-versatileimagefield = "^2.0"
djangorestframework = "^3.12.2"

dj-database-url = "^0.5.0"
mysqlclient = "^2.0.3"

dropbox = "^9.5.0"
django-dropbox = {git = "https://github.com/krnr/django-dropbox/"}
django-storages = "^1.11.1"
whitenoise = "^5.2.0"
diskcache = "^5.1.0"

babel = "^2.9.0"
pillow = "<9"

fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
lxml = "^4.7.1"
dateparser = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
